 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 * build:
 	- do not distribute generated emergency.service;
 	- add TEST_DIR path;
 	- add -Wno-typedef-redefinition;
 * bugfix:
 	- fix add comma when removed option is in the middle(fstab-generator);
 	- fix format string for usec_t type(generator);
 	- fix oneshot service resource control;
 	- use the default RestartSec for serial getty services;
 	- fix Xen domU discovery(virt);
 * remove nss-myhostname support;
 * remove systemd-tty-ask-password-agent program;
 * remove systemd-ask-password program;

   systemd (214.7)
~~~~~~~
 * core:
    - redirect stdout to syslog by default;
    - remove EXEC_OUTPUT_JOURNAL type output;
    - honour rd.systemd.unit= only in the initrd, not the host;
    - clean-up signal reset logic when reexec;
    - log info when snapshots are created and removed;
    - make sure Environment fields passed in for transient units are properly written to unit files;
    - rework messages during shutdown;
    - use correct format string for UIDs;
    - don't require cgroups xattr support;
    - name the stamp file consistently;
    - remove x-systemd-device.timeout handling;
    - introduce new RestartForceExitStatus= service setting;
    - add exit_status_set_is_empty function;
    - fix uninitialized memory access;